better docker-compose + fix SSL